--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^5.3.1",
     "bulma": "^0.9.4",
     "bulma-calendar": "^6.1.19",
+    "html-to-image": "^1.11.11",
     "igniteui-angular": "^14.0.0",
     "jquery": "^3.7.1",
     "moment": "^2.29.4",
