--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jquery": "^3.7.1",
     "moment": "^2.29.4",
     "ng2-daterangepicker": "^1.1.0",
+    "pdfmake": "^0.2.9",
     "popper.js": "^1.16.1",
     "print-js": "^1.6.0",
     "rxjs": "~7.5.0",
@@ -43,6 +44,7 @@
     "@angular/cli": "~14.2.4",
     "@angular/compiler-cli": "^14.2.0",
     "@types/jasmine": "~4.0.0",
+    "@types/pdfmake": "^0.2.8",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
